nobase_dist_pkgdata_DATA = \
	samples/dll-simple/include/library.hpp \
	samples/dll-simple/src/library.cpp \
	samples/dll-simple/project.json \
	samples/exe-debug-release/src/main.cpp \
	samples/exe-debug-release/project.json \
	samples/exe-simple/src/main.cpp \
	samples/exe-simple/project.json \
	License.txt \
	README.md

SUBDIRS = src
