add_executable (cpm
	exception.cpp
	exception.hpp
	filesystem.cpp
	filesystem.hpp
	json/errors.cpp
	json/errors.hpp
	json/parser.cpp
	json/parser.hpp
	json/tokenizer.cpp
	json/tokenizer.hpp
	json/value.cpp
	json/value.hpp
	main.cpp
	program_options.cpp
	program_options.hpp
	program_options.inl
	program.cpp
	program.hpp
	project_builder.cpp
	project_builder.hpp
	string.cpp
	string.hpp
	string.inl
)
