bin_PROGRAMS = cpm
cpm_SOURCES = \
	exception.cpp \
	exception.hpp \
	filesystem.cpp \
	filesystem.hpp \
	filesystem.inl \
	json/errors.cpp \
	json/errors.hpp \
	json/parser.cpp \
	json/parser.hpp \
	json/tokenizer.cpp \
	json/tokenizer.hpp \
	json/value.cpp \
	json/value.hpp \
	main.cpp \
	program_options.cpp \
	program_options.hpp \
	program_options.inl \
	program.cpp \
	program.hpp \
	project_builder.cpp \
	project_builder.hpp \
	string.cpp \
	string.hpp \
	string.inl
