bin_PROGRAMS = cpm
cpm_SOURCES = \
	exception.cpp \
	exception.hpp \
	filesystem.cpp \
	filesystem.hpp \
	filesystem.inl \
	json/errors.cpp \
	json/errors.hpp \
	json/parser.cpp \
	json/parser.hpp \
	json/tokenizer.cpp \
	json/tokenizer.hpp \
	json/value.cpp \
	json/value.hpp \
	main.cpp \
	option/commands.cpp \
	option/commands.hpp \
	option/errors.cpp \
	option/errors.hpp \
	option/optionals.cpp \
	option/optionals.hpp \
	option/options.cpp \
	option/options.hpp \
	program.cpp \
	program.hpp \
	project_builder.cpp \
	project_builder.hpp \
	string.cpp \
	string.hpp \
	string.inl \
	toolchain/identifiers.cpp \
	toolchain/identifiers.hpp
